--- a/vaardigheden.css
+++ b/vaardigheden.css
@@ -26,6 +26,7 @@ body {
     font-size: 1.8rem;
     font-weight: bold;
     color: #ebebeb;
+    font-family: "Momo Trust Sans", sans-serif;
 }
 
 .nav-links {
